[package]
name = "lnreader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0"
repository = "https://github.com/yixinBC/lnreader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
scraper = "0.15.0"
reqwest = { version = "0.11", features = ["cookies"] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["macros"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
